# travel-data-retrieval

./: .gitignore  README.md  main.py  pyproject.toml
aita_code_grab/: wikipedia_scrap.py
amadeus_api/: api_call.py
